# ict-spec

./: .gitignore  LICENSE  README.md  best_practices.md  definitions.md  ictspec.d.ts  jsonschema.py  noxfile.py  packaging_guidelines.md  pyproject.toml  schema.json  spec.md
example/: spec.json  spec.yaml
src/ict/: __init__.py  model.py  validate.py
src/ict/common/: __init__.py  semver.py
src/ict/hardware/: __init__.py  objects.py
src/ict/io/: __init__.py  objects.py
src/ict/metadata/: __init__.py  objects.py
src/ict/tools/: __init__.py  cwl_ict.py
src/ict/ui/: __init__.py  objects.py  ui_types.py
src/ict/version/: semver.py
src/ict/wipp_utils/: hardware.py  io.py  metadata.py  ui.py
tests/: test_individual.py  test_model.py  test_version.py  test_wipp_conversion.py
