[tool.poetry]
authors = ["Camilo Velez <camilo.velez@axleinfo.com>"]
description = "ICT Python Client"
name = "ict"
packages = [{include = "ict", from = "src"}]
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
pydantic = {extras = ["email"], version = "^2.1.1"}
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
