[tool.poetry]
authors = ["Camilo Velez <camilo.velez@axleinfo.com>"]
description = "ICT Python Client"
name = "ict"
packages = [{include = "ict", from = "src"}]
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
pydantic = {extras = ["email"], version = "^2.3"}
python = "^3.9"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
nox = "^2023.4.22"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
